<resources>
    <string name="app_name">LoveMarker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">setting</string>
    <string name="action_about">about</string>
    <string name="main_map_page">Map</string>
    <string name="my_profile_page_title">My Profile</string>
    <string name="current_list_page_title">Now</string>
    <string name="notification_page_title">Notification</string>
    <string name="enter_chat_page_page_title">Chat</string>
    <string name="near_list_page_title">Near</string>
    <string name="net_work_invalid">There is some problem with network</string>
    <string name="report_us_hint">Please give some advise</string>
    <string name="report_us_success_toast">Report success</string>
    <string name="please_login_first">Please Login First</string>
    <string name="can_not_get_your_location">Can not get your location</string>
    <string name="click_twice_finish">Double click to quit</string>
    <string name="main_map_no_post_toast">There is no one marked here , it is your time !</string>
    <string name="main_map_some_problem_happen">something happen</string>
    <string name="yesterday">yesterday</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="avatar">Nickname</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_user_info_title">Fill your profile</string>
    <string name="unser_info__user_info_title">My profile</string>
    <string name="register_user_info_edit_text_hint">Please fill your nickname</string>
    <string name="register_password_edit_text_hint">Please set your password</string>
    <string name="register_user_info_gender_text_view">Select gender</string>
    <string name="register_user_info_gender_text_view_female">female</string>
    <string name="register_user_info_gender_text_view_male">male</string>
    <string name="email_phone_edit_text_hint">Please Enter Your Phone Number Or Email</string>
    <string name="login_failed">Fail to register</string>
    <string name="register_birthday_title">Your birthday</string>
    <string name="register_birthday_text">Birthday</string>
    <string name="forgot_password_text">Sorry about your problem , developer can not afford the server to verification your phone number</string>
    <string name="username_or_password_invalid">username or password invalid</string>
    <string name="please_input_username">please input username</string>
    <string name="please_input_password">please input password</string>
    <string name="please_input_gender">please select gender</string>
    <string name="please_input_gnickname">please_input_nickname</string>
    <string name="go_to_register">To register now </string>
    <string name="forget_password">Get back password</string>
    <string name="register_success">register success !</string>
    <string name="register_done">Done</string>
    <string name="next">next</string>
    <string name="current_list_page_time_status_title">Last one hour</string>
    <string name="current_list_page_time_status_sub_title">Click to view more marks</string>
    <string name="current_list_page_time_status_sub_title_now">Click to view love marks in last one hour</string>
    <string name="current_list_page_number_status_title">There is no marks in last one hour,here are some latest marks</string>
    <string name="current_list_page_number_status_title_only_get_current">Latest marks</string>
    <string name="current_list_page_report_rubbish_post">Spam</string>
    <string name="current_list_page_report_illegal_post">Illegal information</string>
    <string name="current_list_page_report_not_for_publication_post">Off the record information</string>
    <string name="current_list_page_report_other_invalid_post">Else</string>
    <string name="current_list_page_report_report_success">Report Success</string>
    <string name="current_list_page_report_report_content_empty">Select or fill the reason</string>
    <string name="current_list_page_no_more_post">No more marks</string>
    <string name="publish_page_title">I am here</string>
    <string name="publish_page_reminder_text">A specific description</string>
    <string name="publish_page_public_button_text">Mark your love !</string>
    <string name="publish_page_public_select_post_tag">Please select or fill somethings about your love</string>
    <string name="publish_page_is_sure_cancel_post">Are you sure cancel marking ?</string>
    <string name="publish_page_sure_cancel_post">Yse</string>
    <string name="publish_page_cancel_cancel_post">No,it is a mistake</string>
    <string name="publish_page_post_failed">Mark failed for some un-know reason </string>
    <string name="publish_page_post_success">Mark success</string>
    <string name="publish_page_post_failed_cause_server">Mark failed,maybe the server problem</string>
    <string name="publish_page_post_failed_cause_network">Network problem , try again please</string>
    <string name="profile_activity_header_title">Love Marks</string>
    <string name="profile_activity_simple_profile">There is no profile</string>
    <string name="profile_activity_gender">Gender</string>
    <string name="profile_activity_gender_male">Male</string>
    <string name="profile_activity_gender_female">Female</string>
    <string name="profile_activity_age">Age</string>
    <string name="profile_activity_long_profile">Lazy people , there is nothing</string>
    <string name="profile_activity_failed_to_get_user_info">Get user information failed</string>
    <string name="my_profile_fragment_change_avatar">Update Avatar</string>
    <string name="my_profile_fragment_nickname">Nickname</string>
    <string name="my_profile_fragment_gender">Gender</string>
    <string name="my_profile_fragment_birthday">Birthday</string>
    <string name="my_profile_fragment_constellation">constellation</string>
    <string name="my_profile_fragment_simple_profile">Introduce yourself</string>
    <string name="my_profile_fragment_long_profile">More detail about yourself</string>
    <string name="my_profile_fragment_username">username</string>
    <string name="my_profile_fragment_change_password">change password</string>
    <string name="my_profile_fragment_my_post">My Marks</string>
    <string name="my_profile_failed_to_update_avatar">Failed to updata avatar</string>
    <string name="my_profile_failed_to_delete_my_post">For some reason , deleted failed</string>
    <string name="my_profile_success_to_delete_my_post">Deleted Success</string>
    <string name="my_profile_is_sure_to_delete_my_post">Are you sure you want delete it ?</string>
    <string name="my_profile_sure_to_delete_my_post">Yes</string>
    <string name="my_profile_cancel_delete_my_post">No</string>
    <string name="my_profile_edit_success">Edited Success</string>
    <string name="my_profile_edit_failed">Sorry,edited failed please try again</string>
    <string name="my_profile_input_old_password">Please input your old password</string>
    <string name="my_profile_edit_profile">Edit Profile</string>
    <string name="my_profile_input_valid_password">Please input valid password</string>
    <string name="my_profile_input_password_again">Please input your password again</string>
    <string name="album_group">Album</string>
    <string name="album_child">Local Picture</string>
    <string name="about_us_activity_purpose_content">Let you know who did the things full of love </string>
    <string name="about_us_activity_share_app">Share LoveMarker</string>
    <string name="about_us_activity_report_issue">Advise</string>
    <string name="about_us_activity_report_content_can_not_be_empty">advise cannot be empty</string>
    <string name="about_us_activity_share_content">LoveMarker, Let you know who did the things full of love in the world,
        how they fell,how about it and satisfy your curiosity .
        Download APP https://github.com/chenjunqian/here/blob/master/app-release.apk</string>
    <string name="login_register_input_valid_username">Please fill with the right number or Email</string>
    <string name="login_register_input_password">Please fill your password</string>
    <string name="login_register_input_valid_password">Password should not be less than 6 digits</string>
    <string name="login_register_username_is_exist">This account is already registered</string>
    <string name="login_register_logout">Logout</string>
    <string name="login_register_is_sure_logout">Are you sure to logout ?</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_send">Send</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_picture">Image</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_location">Location</string>
    <string name="attach_video">Video</string>
    <string name="attach_file">File</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="attach_video_call">Video call</string>
    <string name="user_card">Business card</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="send_fail">Send failed</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_conversation_messages">Delete conversation and messages</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_voice">Delete voice</string>
    <string name="delete_video">Delete video</string>
    <string name="delete">Delete</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Logout</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_message">The location information</string>
    <string name="recording_video">Record video</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">Voice</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[Voice call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_add">Add</string>
    <string name="search_header">Search</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="select_contacts">Select the contact</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
</resources>