<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_page_tag_layout"
            android:title="@string/main_map_page"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/user_list_item_layout"
            android:title="@string/near_list_page_title"
            android:icon="@drawable/ic_view_list" />
        <item
            android:id="@+id/current_post_list_item_layout"
            android:title="@string/current_list_page_title"
            android:icon="@drawable/ic_history_black_18dp"/>
        <item
            android:id="@+id/enter_chat_main_page_item_layout"
            android:title="@string/enter_chat_page_page_title"
            android:icon="@drawable/ic_speaker_notes_blue_24dp"/>
    </group>

    <item
        android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/login_item_layout"
                android:title="登录"
                android:icon="@drawable/ic_lock_36pt_2x" />
        </menu>
    </item>

</menu>
