<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="80"
        android:title="@string/main_map_page"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications_none_white_24dp"
        android:orderInCategory="80"
        android:title="@string/notification_page_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about_us"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />


</menu>
