<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/universal_layout_background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:background="@color/universal_title_background_red">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_user_info_title"
            android:textColor="@color/universal_white"
            android:textSize="@dimen/universal_title_text_size" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_user_info_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_user_info_edit_text_hint" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:layout_marginTop="25dp"
        android:background="@color/universal_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:text="@string/register_user_info_gender_text_view"
            android:textColor="@color/universal_item_text_color_black"
            android:textSize="@dimen/universal_title_text_size" />


        <RadioGroup
            android:id="@+id/register_user_info_gender_radio_group"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <RadioButton
                android:id="@+id/register_user_info_gender_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/register_user_info_gender_text_view_male"
                android:textColor="@color/universal_item_text_color_black"/>

            <RadioButton
                android:id="@+id/register_user_info_gender_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/register_user_info_gender_text_view_female"
                android:textColor="@color/universal_item_text_color_black" />

        </RadioGroup>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/register_user_info_next_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/universal_title_height"
            android:layout_centerInParent="true"
            android:textColor="@color/universal_white"
            android:background="@drawable/green_button_selector"
            android:text="@string/next" />
    </RelativeLayout>
</LinearLayout>