<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/universal_layout_background_color"
    android:orientation="vertical"
    tools:context=".controller.login_register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:background="@color/universal_title_background_red">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/universal_white"
            android:textSize="@dimen/universal_title_text_size" />
    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_page_email_phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_phone_edit_text_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_page_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_password_edit_text_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_page_email_phone_next_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/universal_title_height"
            android:layout_centerInParent="true"
            android:background="@drawable/green_button_selector"
            android:text="@string/next"
            android:textColor="@color/universal_white" />
    </RelativeLayout>
</LinearLayout>