<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/universal_alert_dialog_shape"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rubbish_post_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rubbish_post_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/universal_20dp"
            android:layout_marginTop="10dp"
            android:text="@string/current_list_page_report_rubbish_post"
            android:textColor="@color/universal_item_text_color_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/illegal_post_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/illegal_post_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/universal_20dp"
            android:layout_marginTop="10dp"
            android:text="@string/current_list_page_report_illegal_post"
            android:textColor="@color/universal_item_text_color_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_for_publication_post_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/not_for_publication_post_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/universal_20dp"
            android:layout_marginTop="10dp"
            android:text="@string/current_list_page_report_not_for_publication_post"
            android:textColor="@color/universal_item_text_color_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/other_invalid_post_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/other_invalid_post_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/universal_20dp"
            android:layout_marginTop="10dp"
            android:text="@string/current_list_page_report_other_invalid_post"
            android:textColor="@color/universal_item_text_color_black" />

        <EditText
            android:id="@+id/other_invalid_post_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="@dimen/universal_20dp"
            android:layout_marginEnd="@dimen/universal_20dp"
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:textColor="@color/universal_item_text_color_black"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:background="@color/universal_under_line_color_black"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/universal_20dp"
        android:layout_marginEnd="@dimen/universal_20dp"
        android:layout_height="1dp">

    </View>

    <RelativeLayout
        android:id="@+id/dialog_report_post_operate_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/universal_20dp"
        android:layout_marginBottom="@dimen/universal_20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/report_post_ok_button"
            android:layout_alignParentLeft="true"
            android:layout_width="@dimen/universal_80dp"
            android:layout_height="@dimen/universal_40dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/universal_round_light_color_button_shape_40dp"
            android:text="ok"
            android:textColor="@color/universal_grey_six" />


        <Button
            android:id="@+id/report_post_cancel_button"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/universal_80dp"
            android:layout_marginEnd="30dp"
            android:layout_height="@dimen/universal_40dp"
            android:background="@drawable/universal_round_green_button_shape_40dp"
            android:text="cancel"
            android:textColor="@color/universal_white" />
    </RelativeLayout>
</LinearLayout>