<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/universal_layout_background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height"
        android:background="@color/universal_title_background_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/publish_page_title"
            android:textColor="@color/universal_white"
            android:textSize="@dimen/universal_title_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/universal_title_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/publish_page_reminder_text"
            android:textColor="@color/universal_item_text_color_sub_black" />

    </RelativeLayout>


    <EditText
        android:id="@+id/publish_page_share_content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:textColor="@color/universal_item_text_color_black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/universal_white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/post_image_view_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/post_image_view_one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:src="@color/universal_title_background_green" />

            <ImageView
                android:id="@+id/post_image_view_two"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:src="@color/universal_title_background_green" />

            <ImageView
                android:id="@+id/post_image_view_three"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:src="@color/universal_title_background_green" />

            <ImageView
                android:id="@+id/post_image_view_four"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                android:src="@color/universal_title_background_green" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/add_post_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/post_image_view_layout"
            android:src="@drawable/ic_add_post_image_18pt" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/publish_page_public_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/universal_title_height"
            android:layout_centerInParent="true"
            android:background="@drawable/green_button_selector"
            android:text="@string/publish_page_public_button_text"
            android:textColor="@color/universal_white" />
    </RelativeLayout>

</LinearLayout>